Updated CMakeList for inclusion of pipuck foraging example

--- a/loop_functions/CMakeLists.txt
+++ b/loop_functions/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(foraging_loop_functions)
 add_subdirectory(mpga_loop_functions)
 
 # Descend into the pipuck_loop_functions directory
-add_subdirectory(pipuck_loop_functions)
+add_subdirectory(pipuck_foraging_loop_functions)
 
 # Descend into the custom_distributions_loop_functions directory
 add_subdirectory(custom_distributions_loop_functions)
