--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(footbot_nn)
 add_subdirectory(eyebot_circle)
 add_subdirectory(eyebot_flocking)
 add_subdirectory(epuck_obstacleavoidance)
+add_subdirectory(pipuck_foraging)
 add_subdirectory(pipuck_obstacleavoidance)
